hphp/test/slow/global_func/meth_caller/meth_caller_multiple.php.expectf
function(MethCaller$Ans\A$afunc)
int(2)
string(5) "Ans\A"
string(5) "afunc"
function(MethCaller$Ans\A$afunc)
int(4)
string(5) "Ans\A"
string(5) "afunc"
function(MethCaller$Ans\A$afunc)
int(2)
string(5) "Ans\A"
string(5) "afunc"
function(MethCaller$Ans\Bns\A$afunc)
int(3)
string(9) "Ans\Bns\A"
string(5) "afunc"
function(MethCaller$Ans\A$afunc)
int(8)

Fatal error: Uncaught exception 'HH\InvariantException' with message 'object must be an instance of (Ans\A)' in %s/meth_caller_multiple.php:20
Stack trace:
#0 (): HH\invariant_violation()
#1 %s/meth_caller_multiple.php(20): MethCaller$Ans\A$afunc()
%a {main}
